Small frontend so people can try it / maybe fix it.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "outDir": "build"
   },
   "files": [
+    "typings/main.d.ts",
     "src/explode.ts",
+    "src/extract.ts",
     "src/bytebuff.ts",
     "src/unzip.ts",
     "src/inflate.ts",
