--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,9 @@
 			"name": "Launch",
 			"type": "node",
 			"request": "launch",
-			"program": "${workspaceRoot}/lol.js",
-			"stopOnEntry": false,
-			"args": [],
+			"program": "${workspaceRoot}/build/extract.js",
+			"stopOnEntry": true,
+			"args": ["/Users/jvilk/Downloads/pkzip_example_methods/SHRINK.ZIP", "/ADDENDUM.DOC"],
 			"cwd": "${workspaceRoot}",
 			"preLaunchTask": null,
 			"runtimeExecutable": null,
