--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
     "src/bytebuff.ts",
     "src/unzip.ts",
     "src/inflate.ts",
-    "src/ptr.ts"
+    "src/ptr.ts",
+    "src/unzpriv.ts",
+    "src/unshrink.ts"
   ]
 }
