--- a/package.json
+++ b/package.json
@@ -1,14 +1,32 @@
 {
-  "name": "decompress-implode",
-  "version": "0.0.1",
-  "description": "Decompress IMPLODEd data by EXPLODEing it.",
+  "name": "browserfs-zipfs-extras",
+  "version": "1.0.0",
+  "description": "Extra decompression routines for BrowserFS's ZipFS",
+  "license": "GPL2",
+  "main": "dist/browserfs-zipfs-extras-node.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jvilk/decompress-implode.git"
   },
+  "scripts": {
+    "build:tsc": "tsc -p src",
+    "build:sweet": "sjs -c -m ./macros/macros.js ./build/browserfs-zipfs-extras.js -o ./dist/browserfs-zipfs-extras.js",
+    "build:node:sweet": "sjs -c -m ./macros/macros.js ./build/browserfs-zipfs-extras-node.js -o ./dist/browserfs-zipfs-extras-node.js",
+    "build:fix-sweet-maps": "node scripts/fix-sweet-maps.js",
+    "build:merge-source-maps": "merge-source-maps --inline-sources dist/*.js",
+    "build:mkdir": "mkdirp dist",
+    "build:rollup": "rollup -c rollup.config.js",
+    "build:node:rollup": "rollup -c rollup.node.config.js",
+    "build:test": "tsc -p test/src",
+    "prepublish": "npm-run-all --serial build:tsc --parallel build:rollup build:node:rollup --serial build:mkdir --parallel build:sweet build:node:sweet --serial build:fix-sweet-maps build:merge-source-maps",
+    "karma": "karma start karma.config.js",
+    "test": "npm-run-all --parallel prepublish build:test --serial karma"
+  },
   "keywords": [
-    "compression",
     "decompression",
+    "unshrink",
+    "reduce",
+    "unreduce",
     "implode",
     "explode",
     "zip",
@@ -20,7 +38,34 @@
   },
   "homepage": "https://github.com/jvilk/decompress-implode#readme",
   "dependencies": {
-    "browserfs": "^0.5.12",
-    "crc-hash": "^0.2.2"
+    "browserfs": "^1.0"
+  },
+  "devDependencies": {
+    "@types/chai": "^3.4.34",
+    "@types/dropboxjs": "0.0.29",
+    "@types/filesystem": "0.0.28",
+    "@types/mocha": "^2.2.32",
+    "@types/node": "6.0.33",
+    "browserfs": "^0.5.13",
+    "chai": "^3.5.0",
+    "detect-browsers": "^2.0.0",
+    "js-crc": "^0.1.0",
+    "karma": "^1.3.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-ie-launcher": "^1.0.0",
+    "karma-mocha": "^1.2.0",
+    "karma-opera-launcher": "^1.0.0",
+    "karma-safari-launcher": "^1.0.0",
+    "merge-source-maps": "^0.5.0",
+    "mkdirp": "^0.5.1",
+    "mocha": "^3.1.2",
+    "npm-run-all": "^3.1.1",
+    "rollup": "^0.36.3",
+    "rollup-plugin-buble": "^0.14.0",
+    "rollup-plugin-sourcemaps": "^0.4.1",
+    "sweet.js": "^0.7",
+    "typescript": "^2.0.6"
   }
 }
